# server-driven-ui

./: .gitignore  LICENSE  README.md
client/: pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/server_driven_ui_demo/: MainActivity.kt
client/android/app/src/profile/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/api/: graphql.dart  screen_query.dart
client/lib/components/: app_bar_component.dart  column_component.dart  component.dart  container_component.dart  grid_view_component.dart  registry.dart  text_button_component.dart  text_field_component.dart
client/lib/screens/: home.dart  sign_in.dart
server/: Cargo.toml
server/src/: main.rs  schema.rs
server/src/resolvers/: mod.rs
server/src/resolvers/screen/: home.rs  query.rs  sign_in.rs
