[package]
name = "server-driven-ui-demo"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-cors = "0.5"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.15"
derive_more = "0.99"
